@@ -18,9 +18,11 @@ public class ArrayListExample {
      * @param args not used
      */
     public static void main(String[] args) {
+        // Instantiate an empty list
         List<Integer> list0 = new ArrayList<>();
         System.out.println("An empty list: " + list0);
 
+        // Instantiate an empty list with a given initial capacity
         List<Integer> list1 = new ArrayList<Integer>(5);
         System.out.println("An empty list w/ given (5) capacity: " + list1);
 
@@ -28,23 +30,23 @@ public class ArrayListExample {
         list1.add(56);
         // adding an element in the first position
         list1.add(0, 18);
+        // adding an element in the first position (Java 21)
+        list1.addFirst(99);
+
         list1.add(42);
         System.out.println("After adding elements: " + list1);
 
         ArrayList<Integer> list2 = new ArrayList<>(list1);
         System.out.println("A list by copy constructor: " + list2);
 
-        Integer value = list2.get(0);
-        System.out.println("Value at the beginning: " + value);
+        System.out.println("First element is " + list2.get(0));
+        System.out.println("First element (Java 21) is " + list2.getFirst());
 
-        // calculate the index of the last element
-        int lastPos = list2.size() - 1;
-        // change its value
-        list2.set(lastPos, 11);
+        System.out.println("Change last, its previous value was " + list2.set(list2.size() - 1, 11));
 
         // removing the element in second position
         list2.remove(1);
 
-        System.out.println("After changing the last element and removing the middle one: " + list2);
+        System.out.println("After changing and removing: " + list2);
     }
 }
